Feat : "모델링, 마이그레이션 및 데이터 DB 입력"
사전에 정의한 스키마에 따라 ERD 설계 및 MySQL을 통한 DB구축
Migration 완료 후 migrate 파일 생성
MADUP으로부터 받은 csv파일을 DB에 입력

--- a/.gitignore
+++ b/.gitignore
@@ -425,3 +425,5 @@ zsdoc/data
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode,macos,windows,linux,vim,zsh
 
 my_settings.py
+db_uploader.py
+*.sql
