--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,47 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-mysqlclient = "*"
-django-cors-headers = "*"
-pymysql = "*"
-djangorestframework = "*"
-django-extensions = "*"
-ipython = "*"
-markdown = "*"
-django-filter = "*"
+mysqlclient = "==2.1.0"
+django-cors-headers = "==3.11.0"
+djangorestframework = "==3.13.1"
+django-extensions = "==3.1.5"
+ipython = "==8.2.0"
+django-filter = "==21.1"
+asgiref = "==3.5.0"
+asttokens = "==2.0.5"
+atomicwrites = "==1.4.0"
+attrs = "==21.4.0"
+backcall = "==0.2.0"
+certifi = "==2020.6.20"
+colorama = "==0.4.4"
+decorator = "==5.1.1"
+executing = "==0.8.3"
+iniconfig = "==1.1.1"
+jedi = "==0.18.1"
+matplotlib-inline = "==0.1.3"
+parso = "==0.8.3"
+pickleshare = "==0.7.5"
+pluggy = "==1.0.0"
+prompt-toolkit = "==3.0.29"
+ptyprocess = "==0.7.0"
+pure-eval = "==0.2.2"
+py = "==1.11.0"
+pyparsing = "==3.0.8"
+pytest = "==7.1.2"
+pytest-django = "==4.5.2"
+pytz = "==2022.1"
+six = "==1.16.0"
+sqlparse = "==0.4.2"
+stack-data = "==0.2.0"
+tomli = "==2.0.1"
+traitlets = "==5.1.1"
+tzdata = "==2022.1"
+wcwidth = "==0.2.5"
+wincertstore = "==0.2"
+Django = "==4.0.4"
+PyMySQL = "==1.0.2"
+Markdown = "==3.3.6"
+Pygments = "==2.12.0"
 
 [dev-packages]
 
