Fix: Change column name in Ad table and Result table
Ad 테이블의 user 컬럼의 이름을 명확한 명칭의  advertiser로 변경
Result 테이블의 ad 컬럼의 이름을 명확한 명칭의 uid로 변경

--- a/Pipfile
+++ b/Pipfile
@@ -45,6 +45,9 @@ Django = "==4.0.4"
 PyMySQL = "==1.0.2"
 Markdown = "==3.3.6"
 Pygments = "==2.12.0"
+cffi = "==1.15.0"
+cryptography = "==37.0.1"
+pycparser = "==2.21"
 
 [dev-packages]
 
