--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
 
   web:
     build: .
+#    dockerfile: Dockerfile
     command: >
       bash -c "python /code/manage.py migrate
       && python /code/manage.py runserver 0.0.0.0:8000"
